--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             font-family: 'Lato', sans-serif;
             color: var(--color-dark);
             background-color: var(--color-secondary);
+
             line-height: 1.6;
             scroll-behavior: smooth;
         }
@@ -686,18 +687,18 @@
 </head>
 <body>
     <video autoplay muted loop class="video-background">
-        <source src="path/to/your/video.webm" type="video/webm">
+        <source src="https://github.com/mizulegendsstudios/sastrerialosabuelos/raw/refs/heads/main/src/videos/sastrerialosabuelos.webm" type="video/webm">
         Su navegador no soporta HTML5 video tag.
     </video>
     
     <header>
-        <h1>Sastrería Exclusiva</h1>
+        <h1>Sastrería Los Abuelos</h1>
         <p>Arte a Mano en Panamá</p>
     </header>
     
     <nav>
         <div class="nav-container">
-            <div class="logo">Sastrería Exclusiva</div>
+            <div class="logo">Sastrería Los Abuelos</div>
             <button class="menu-toggle" id="menuToggle">
                 <i class="fas fa-bars"></i>
             </button>
