--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sastrería exclusiva en Panamá especializada en trajes a medida de alta calidad. Confección artesanal con más de 25 años de experiencia.">
     <meta name="keywords" content="sastrería a medida Panamá, trajes exclusivos Panamá, sastre personal Panamá, trajes elegantes, sastrería artesanal, trajes a medida, sastrería de lujo">
-    <title>Sastrería Exclusiva Panamá | Trajes a Medida y Confección Artesanal</title>
+    <title>Sastrería Los Abuelos | Panamá | Trajes a Medida y Confección Artesanal</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
